overlap fix

--- a/css/mystyles.css
+++ b/css/mystyles.css
@@ -63,7 +63,8 @@
 .card:hover {
   -ms-transform: scale(1.1); /* IE 9 */
   -webkit-transform: scale(1.1); /* Safari 3-8 */
-  transform: scale(1.1); 
+  transform: scale(1.1);
+  z-index: 2000; 
 }
 
 .cardimage{
